data/test/method_as_function/negative/1001.js
const axios = require('axios');
axios.post('https://petstore.swagger.io/v2/pets', {
    params: {
        name: 'name',
        tag: 'tag'
    }
});